hack/config/policy/controlplane/tests/kube-apiserver/kube-apiserver-hibernated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubernetes
    role: apiserver
  name: kube-apiserver-hibernated
  namespace: shoot--ixywdlfvei--sharding
spec:
  replicas: 0
  template:
    spec:
      containers:
      - name: kube-apiserver
        resources:
          requests:
            cpu: 800m
            memory: 800Mi
