hack/config/policy/controlplane/tests/kube-apiserver/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kube-apiserver
policies:
- ../../kube-apiserver.yaml
resources:
# spec.replicas=2 -> expect spec.replicas=4
- kube-apiserver-awake.yaml
# spec.replicas=null -> expect spec.replicas=4
- kube-apiserver-null.yaml
# spec.replicas=0 -> expect skip
- kube-apiserver-hibernated.yaml
results:
- policy: shoot--ixywdlfvei--sharding/kube-apiserver
  rule: replicas
  resources:
  - shoot--ixywdlfvei--sharding/kube-apiserver-awake
  kind: Deployment
  result: pass
  patchedResources: kube-apiserver-awake_expected.yaml
- policy: shoot--ixywdlfvei--sharding/kube-apiserver
  rule: replicas
  resources:
  - shoot--ixywdlfvei--sharding/kube-apiserver-null
  kind: Deployment
  result: pass
  patchedResources: kube-apiserver-null_expected.yaml
- policy: shoot--ixywdlfvei--sharding/kube-apiserver
  rule: replicas
  resources:
  - shoot--ixywdlfvei--sharding/kube-apiserver-hibernated
  kind: Deployment
  result: skip
